style: Adjust button positioning to avoid being too close to corners in other lists

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -426,7 +426,7 @@ a {
 }
 
 .public-other {
-    margin: 0 0 15px 30px;
+    margin: 0 0 0 30px;
     display: inline-block;
     /* Ensures the container only takes the necessary space */
     padding: 4px 8px;
